--- a/index.html
+++ b/index.html
@@ -2,17 +2,20 @@
 <html>
  <head>
      <title>TRIANGLE TRACKER</title>
-     <link href="CSS/style.css" rel="stylesheet" type="text/css">
+     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     </head>
    <body>
+     <div class="jumbotron">
       <h1>TRIANGLE TRACKER</h1>
       <!-- Load an icon library -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
       <div class="navbar">
          <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>
-         <a href="#"><i class="fa fa-fw fa-search"></i> Search</a>
          <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a>
-         <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
-   </div>
+         <a href="#"><i class="fa fa-fw fa-user"></i> About</a>
+     </div>
+    </div>
+    <body>
+      <p>Welcome to my traingle tracker page</p>
 </html>
