--- a/index.html
+++ b/index.html
@@ -17,5 +17,5 @@
      </div>
     </div>
     <body>
-      <p>Welcome to my traingle tracker page</p>
+      <h2>Welcome to my triangle tracker page</h2>
 </html>
