--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
    <head>
      <title>ABOUT</title>
-     <link href="CSS/styles.css" rel="stylesheet" type="text/CSS">
+     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
    </head>
    <body>
      <h1>ABOUT</h1>
