--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     </head>
    <body>
       <h1>TRIANGLE TRACKER</h1>
-      <!-- Load an icon library -->
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-      <div class="navbar">
-         <a class="active" href="#"><i class="fa fa-fw fa-home"></i>Home</a>
-         <a href="#"><i class="fa fa-fw fa-envelope"></i>Contact</a>
-         <a href="#"><i class="fa fa-fw fa-user"></i>About</a>
-    </div>
+      <div class="topnav" id="myTopnav">
+        <a href="#home" class= "active">Home</a>
+        <a href="about.html">About</a>
+        <a href="Contact.html">Contact</a>
+        <a href="javascript:void(0);" class="icon" onclick="myfunction()">
+          <i class="fa fa-bars"></i>
+         </a>
+      </div>
     <body>
       <h2>Welcome to my triangle tracker page</h2>
 </html>
