--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
          </a>
       </div>
     <body>
-      <h2>Welcome to my triangle tracker page</h2>
+      <h2>BRIAN KAVAGI</h2>
+       <p>WELCOME TO MY TRIANGLE TRACKER PAGE!!!</p>
+       <P></P>
 </html>
