--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
  <head>
      <title>TRIANGLE TRACKER</title>
      <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+     <script src="js/scripts.js"></script>
     </head>
    <body>
       <h1>TRIANGLE TRACKER</h1>
