--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
  <head>
+     <script src="js/scripts.js"></script>
      <title>TRIANGLE TRACKER</title>
      <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-     <script src="js/scripts.js"></script>
-    </head>
+ </head>
    <body>
       <h1>TRIANGLE TRACKER</h1>
       <div class="topnav" id="myTopnav">
@@ -19,4 +19,6 @@
       <h2>BRIAN KAVAGI</h2>
        <p>WELCOME TO MY TRIANGLE TRACKER PAGE!!!</p>
        <P></P>
+    </body>
+   </body>
 </html>
