--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
       </div>
     <body>
       <h2>BRIAN KAVAGI</h2>
+      <div class="container">
+        <img src="img\programming-1558700031985-7819.jpg" alt="A photo of programming" class="image">
        <p>WELCOME TO MY TRIANGLE TRACKER PAGE!!!</p>
        <P></P>
+     </div>
     </body>
    </body>
 </html>
