--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
  <head>
-     <script src="js/scripts.js"></script>
      <title>TRIANGLE TRACKER</title>
      <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
  </head>
@@ -18,10 +17,23 @@
     <body>
       <h2>BRIAN KAVAGI</h2>
       <div class="container">
-        <img src="img\programming-1558700031985-7819.jpg" alt="A photo of programming" class="image">
        <p>WELCOME TO MY TRIANGLE TRACKER PAGE!!!</p>
        <P></P>
+       <form class="form">
+  sideX:<br>
+  <input type="text" type="number" id="sideX">
+  <br>
+  sideY:<br>
+  <input type="text"type="number" id="sideY">
+  <br>
+  sideZ<br>
+  <input type="text"type="number" id="sideZ">
+  <br>
+  <input type="submit" class="button" value="check" onclick="formvalidation()">
+</form>
      </div>
     </body>
    </body>
+   <script src="js/scripts.js"></script>
+
 </html>
