corrections on form

--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
       <h2>BRIAN KAVAGI</h2>
        <p>WELCOME TO MY TRIANGLE TRACKER PAGE!!!</p>
        <P></P>
+       <form class="form">
+  sideX:<br>
+  <input type="text" type="number" id="sideX">
+  <br>
+  sideY:<br>
+  <input type="text"type="number" id="sideY">
+  <br>
+  sideZ<br>
+  <input type="text"type="number" id="sideZ">
+  <br>
+  <input type="submit" class="button" value="check" onclick="formvalidation()">
+</form>
+     </div>
     </body>
    </body>
+   <script src="js/scripts.js"></script>
+
 </html>
