corrections on index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
      <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
  </head>
    <body>
+      <div class="jumbotron">
       <h1>TRIANGLE TRACKER</h1>
       <div class="topnav" id="myTopnav">
         <a href="#home" class= "active">Home</a>
@@ -13,8 +14,8 @@
         <a href="javascript:void(0);" class="icon" onclick="myfunction()">
           <i class="fa fa-bars"></i>
          </a>
+       </div>
       </div>
-    <body>
       <h2>BRIAN KAVAGI</h2>
       <div class="container">
        <p>WELCOME TO MY TRIANGLE TRACKER PAGE!!!</p>
@@ -32,7 +33,6 @@
   <input type="submit" class="button" value="check" onclick="formvalidation()">
 </form>
      </div>
-    </body>
    </body>
    <script src="js/scripts.js"></script>
 
